src/gen/pl0Parser.py
# Generated from D:/Python/compilerZerg/src\pl0.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class pl0Parser ( Parser ):

    grammarFileName = "pl0.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'='", "','", "';'", "':='", "'?'", 
                     "'!'", "'#'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WRITE", "WHILE", 
                      "DO", "IF", "THEN", "ODD", "BEGIN", "END", "CALL", 
                      "CONST", "VAR", "PROCEDURE", "STRING", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_consts = 2
    RULE_var = 3
    RULE_procedure = 4
    RULE_statement = 5
    RULE_assignstmt = 6
    RULE_callstmt = 7
    RULE_writestmt = 8
    RULE_qstmt = 9
    RULE_bangstmt = 10
    RULE_beginstmt = 11
    RULE_ifstmt = 12
    RULE_whilestmt = 13
    RULE_condition = 14
    RULE_expression = 15
    RULE_term = 16
    RULE_factor = 17
    RULE_ident = 18
    RULE_number = 19

    ruleNames =  [ "program", "block", "consts", "var", "procedure", "statement", 
                   "assignstmt", "callstmt", "writestmt", "qstmt", "bangstmt", 
                   "beginstmt", "ifstmt", "whilestmt", "condition", "expression", 
                   "term", "factor", "ident", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    WRITE=19
    WHILE=20
    DO=21
    IF=22
    THEN=23
    ODD=24
    BEGIN=25
    END=26
    CALL=27
    CONST=28
    VAR=29
    PROCEDURE=30
    STRING=31
    NUMBER=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(pl0Parser.BlockContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = pl0Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.block()
            self.state = 41
            self.match(pl0Parser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(pl0Parser.StatementContext,0)


        def consts(self):
            return self.getTypedRuleContext(pl0Parser.ConstsContext,0)


        def var(self):
            return self.getTypedRuleContext(pl0Parser.VarContext,0)


        def procedure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pl0Parser.ProcedureContext)
            else:
                return self.getTypedRuleContext(pl0Parser.ProcedureContext,i)


        def getRuleIndex(self):
            return pl0Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = pl0Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pl0Parser.CONST:
                self.state = 43
                self.consts()


            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pl0Parser.VAR:
                self.state = 46
                self.var()


            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pl0Parser.PROCEDURE:
                self.state = 49
                self.procedure()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(pl0Parser.CONST, 0)

        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pl0Parser.IdentContext)
            else:
                return self.getTypedRuleContext(pl0Parser.IdentContext,i)


        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pl0Parser.NumberContext)
            else:
                return self.getTypedRuleContext(pl0Parser.NumberContext,i)


        def getRuleIndex(self):
            return pl0Parser.RULE_consts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsts" ):
                listener.enterConsts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsts" ):
                listener.exitConsts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConsts" ):
                return visitor.visitConsts(self)
            else:
                return visitor.visitChildren(self)




    def consts(self):

        localctx = pl0Parser.ConstsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_consts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(pl0Parser.CONST)
            self.state = 58
            self.ident()
            self.state = 59
            self.match(pl0Parser.T__1)
            self.state = 60
            self.number()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pl0Parser.T__2:
                self.state = 61
                self.match(pl0Parser.T__2)
                self.state = 62
                self.ident()
                self.state = 63
                self.match(pl0Parser.T__1)
                self.state = 64
                self.number()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(pl0Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(pl0Parser.VAR, 0)

        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pl0Parser.IdentContext)
            else:
                return self.getTypedRuleContext(pl0Parser.IdentContext,i)


        def getRuleIndex(self):
            return pl0Parser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = pl0Parser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(pl0Parser.VAR)
            self.state = 74
            self.ident()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pl0Parser.T__2:
                self.state = 75
                self.match(pl0Parser.T__2)
                self.state = 76
                self.ident()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(pl0Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(pl0Parser.PROCEDURE, 0)

        def ident(self):
            return self.getTypedRuleContext(pl0Parser.IdentContext,0)


        def block(self):
            return self.getTypedRuleContext(pl0Parser.BlockContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_procedure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure" ):
                listener.enterProcedure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure" ):
                listener.exitProcedure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure" ):
                return visitor.visitProcedure(self)
            else:
                return visitor.visitChildren(self)




    def procedure(self):

        localctx = pl0Parser.ProcedureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_procedure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(pl0Parser.PROCEDURE)
            self.state = 85
            self.ident()
            self.state = 86
            self.match(pl0Parser.T__3)
            self.state = 87
            self.block()
            self.state = 88
            self.match(pl0Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignstmt(self):
            return self.getTypedRuleContext(pl0Parser.AssignstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(pl0Parser.CallstmtContext,0)


        def writestmt(self):
            return self.getTypedRuleContext(pl0Parser.WritestmtContext,0)


        def qstmt(self):
            return self.getTypedRuleContext(pl0Parser.QstmtContext,0)


        def bangstmt(self):
            return self.getTypedRuleContext(pl0Parser.BangstmtContext,0)


        def beginstmt(self):
            return self.getTypedRuleContext(pl0Parser.BeginstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(pl0Parser.IfstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(pl0Parser.WhilestmtContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = pl0Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pl0Parser.STRING]:
                self.state = 90
                self.assignstmt()
                pass
            elif token in [pl0Parser.CALL]:
                self.state = 91
                self.callstmt()
                pass
            elif token in [pl0Parser.WRITE]:
                self.state = 92
                self.writestmt()
                pass
            elif token in [pl0Parser.T__5]:
                self.state = 93
                self.qstmt()
                pass
            elif token in [pl0Parser.T__6]:
                self.state = 94
                self.bangstmt()
                pass
            elif token in [pl0Parser.BEGIN]:
                self.state = 95
                self.beginstmt()
                pass
            elif token in [pl0Parser.IF]:
                self.state = 96
                self.ifstmt()
                pass
            elif token in [pl0Parser.WHILE]:
                self.state = 97
                self.whilestmt()
                pass
            elif token in [pl0Parser.T__0, pl0Parser.T__3, pl0Parser.END]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(pl0Parser.IdentContext,0)


        def expression(self):
            return self.getTypedRuleContext(pl0Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_assignstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignstmt" ):
                listener.enterAssignstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignstmt" ):
                listener.exitAssignstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignstmt" ):
                return visitor.visitAssignstmt(self)
            else:
                return visitor.visitChildren(self)




    def assignstmt(self):

        localctx = pl0Parser.AssignstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.ident()
            self.state = 101
            self.match(pl0Parser.T__4)
            self.state = 102
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALL(self):
            return self.getToken(pl0Parser.CALL, 0)

        def ident(self):
            return self.getTypedRuleContext(pl0Parser.IdentContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_callstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallstmt" ):
                listener.enterCallstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallstmt" ):
                listener.exitCallstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallstmt" ):
                return visitor.visitCallstmt(self)
            else:
                return visitor.visitChildren(self)




    def callstmt(self):

        localctx = pl0Parser.CallstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_callstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(pl0Parser.CALL)
            self.state = 105
            self.ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WritestmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(pl0Parser.WRITE, 0)

        def ident(self):
            return self.getTypedRuleContext(pl0Parser.IdentContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_writestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWritestmt" ):
                listener.enterWritestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWritestmt" ):
                listener.exitWritestmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWritestmt" ):
                return visitor.visitWritestmt(self)
            else:
                return visitor.visitChildren(self)




    def writestmt(self):

        localctx = pl0Parser.WritestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_writestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(pl0Parser.WRITE)
            self.state = 108
            self.ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(pl0Parser.IdentContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_qstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQstmt" ):
                listener.enterQstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQstmt" ):
                listener.exitQstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQstmt" ):
                return visitor.visitQstmt(self)
            else:
                return visitor.visitChildren(self)




    def qstmt(self):

        localctx = pl0Parser.QstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_qstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(pl0Parser.T__5)
            self.state = 111
            self.ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BangstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(pl0Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_bangstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBangstmt" ):
                listener.enterBangstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBangstmt" ):
                listener.exitBangstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBangstmt" ):
                return visitor.visitBangstmt(self)
            else:
                return visitor.visitChildren(self)




    def bangstmt(self):

        localctx = pl0Parser.BangstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bangstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(pl0Parser.T__6)
            self.state = 114
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(pl0Parser.BEGIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pl0Parser.StatementContext)
            else:
                return self.getTypedRuleContext(pl0Parser.StatementContext,i)


        def END(self):
            return self.getToken(pl0Parser.END, 0)

        def getRuleIndex(self):
            return pl0Parser.RULE_beginstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeginstmt" ):
                listener.enterBeginstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeginstmt" ):
                listener.exitBeginstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeginstmt" ):
                return visitor.visitBeginstmt(self)
            else:
                return visitor.visitChildren(self)




    def beginstmt(self):

        localctx = pl0Parser.BeginstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_beginstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(pl0Parser.BEGIN)
            self.state = 117
            self.statement()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pl0Parser.T__3:
                self.state = 118
                self.match(pl0Parser.T__3)
                self.state = 119
                self.statement()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(pl0Parser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(pl0Parser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(pl0Parser.ConditionContext,0)


        def THEN(self):
            return self.getToken(pl0Parser.THEN, 0)

        def statement(self):
            return self.getTypedRuleContext(pl0Parser.StatementContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_ifstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstmt" ):
                listener.enterIfstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstmt" ):
                listener.exitIfstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstmt" ):
                return visitor.visitIfstmt(self)
            else:
                return visitor.visitChildren(self)




    def ifstmt(self):

        localctx = pl0Parser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(pl0Parser.IF)
            self.state = 128
            self.condition()
            self.state = 129
            self.match(pl0Parser.THEN)
            self.state = 130
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(pl0Parser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(pl0Parser.ConditionContext,0)


        def DO(self):
            return self.getToken(pl0Parser.DO, 0)

        def statement(self):
            return self.getTypedRuleContext(pl0Parser.StatementContext,0)


        def getRuleIndex(self):
            return pl0Parser.RULE_whilestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilestmt" ):
                listener.enterWhilestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilestmt" ):
                listener.exitWhilestmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilestmt" ):
                return visitor.visitWhilestmt(self)
            else:
                return visitor.visitChildren(self)




    def whilestmt(self):

        localctx = pl0Parser.WhilestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whilestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(pl0Parser.WHILE)
            self.state = 133
            self.condition()
            self.state = 134
            self.match(pl0Parser.DO)
            self.state = 135
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ODD(self):
            return self.getToken(pl0Parser.ODD, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pl0Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pl0Parser.ExpressionContext,i)


        def getRuleIndex(self):
            return pl0Parser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = pl0Parser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pl0Parser.ODD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(pl0Parser.ODD)
                self.state = 138
                self.expression()
                pass
            elif token in [pl0Parser.T__12, pl0Parser.T__13, pl0Parser.T__16, pl0Parser.STRING, pl0Parser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.expression()
                self.state = 140
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pl0Parser.T__1) | (1 << pl0Parser.T__7) | (1 << pl0Parser.T__8) | (1 << pl0Parser.T__9) | (1 << pl0Parser.T__10) | (1 << pl0Parser.T__11))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 141
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pl0Parser.TermContext)
            else:
